# scheme.rs

./: 404.html  404.jinja2  LICENSE  feed.xml  index.html  index.jinja2  index.md  maji.py  makefile  pyproject.toml  scheme.rs.html  scheme.rs.md
comparator/: README.md  chibi.data  chibi.js  chibi.wasm  code.scm  foo.json  index.html  index.js  main.css  main.js  main.scm  makefile  package-lock.json  package.json  webpack.config.js
comparator/data/: 00-hyperdata.scm  01-comparator.scm  02-chez.scm  03-gambit.scm  04-gerbil.scm  05-racket.scm  06-bigloo.scm  07-mit.scm  08-guile.scm  09-loko.scm  10-cyclone.scm  11-bones.scm  12-chicken.scm  13-s7.scm  15-gauche.scm  16-kawa.scm  19-s9fes.scm  20-stklos.scm  99-hyperdata.scm  template.txt
discourse/: index.html  index.md
scheme/base/: index.html
scheme/bitwise/: index.html
scheme/box/: index.html
scheme/bytevector/: index.html
scheme/case-lambda/: index.html
scheme/char/: index.html
scheme/charset/: index.html
scheme/comparator/: index.html
scheme/complex/: index.html
scheme/cxr/: index.html
scheme/division/: index.html
scheme/ephemeron/: index.html
scheme/eval/: index.html
scheme/file/: index.html
scheme/fixnum/: index.html
scheme/flonum/: index.html
scheme/generator/: index.html
scheme/hash-table/: index.html
scheme/idque/: index.html
scheme/ilist/: index.html  index.md
scheme/inexact/: index.html
scheme/lazy/: index.html
scheme/list-queue/: index.html
specification/: index.html  index.md
static/: styles.css  styles.css~
tutorial/: index.html  index.md
(+28 files in other folders)
